CMAKE_MINIMUM_REQUIRED (VERSION 2.8...3.19)

if (POLICY CMP0048)
  cmake_policy(SET CMP0048 NEW)
endif (POLICY CMP0048)

PROJECT (
    RayTracing
    LANGUAGES CXX)

IF (NOT CMAKE_BUILD_TYPE)
    SET (CMAKE_BUILD_TYPE Release)
ENDIF()

IF (UNIX)
    SET (CMAKE_CXX_FLAGS "-Wall -Wextra -std=c++11 -lpthread")
ELSE (UNIX)
    SET (CMAKE_CXX_FLAGS "-Wall -Wextra -std=c++11")
ENDIF (UNIX)

SET (CMAKE_CXX_FLAGS_DEBUG "-g")
SET (CMAKE_CXX_FLAGS_RELEASE "-O3")
ADD_DEFINITIONS (-DCMAKE_EXPORT_COMPILE_COMMANDS=ON)

ADD_SUBDIRECTORY (src)
ADD_SUBDIRECTORY (apps)