CMAKE_MINIMUM_REQUIRED (VERSION 2.8...3.19)

SET (PROJECT_NAME main)

SET (PROJECT_SOURCE main.cpp)

PROJECT(${PROJECT_NAME})

ADD_EXECUTABLE (${PROJECT_NAME} ${PROJECT_SOURCE})

FIND_PACKAGE (Threads)

TARGET_COMPILE_FEATURES (${PROJECT_NAME} PRIVATE cxx_std_17)

TARGET_LINK_LIBRARIES (${PROJECT_NAME}
    basic
    hittable
    material
    texture
    thread_pool
)

TARGET_INCLUDE_DIRECTORIES (${PROJECT_NAME} PUBLIC
    ../include
)

SET (EXECUTABLE_OUTPUT_PATH ../../)