CMAKE_MINIMUM_REQUIRED (VERSION 2.8...3.19)

SET (LIBRARY_NAME material)

PROJECT (${LIBRARY_NAME} CXX)

SET (SOURCES
    lambertian
    metal
    dielectric
)

ADD_LIBRARY (${LIBRARY_NAME} STATIC
    ${SOURCES}
)

TARGET_LINK_LIBRARIES (${LIBRARY_NAME} PUBLIC
    basic
)

TARGET_INCLUDE_DIRECTORIES (${LIBRARY_NAME} PRIVATE
    ../../include/${LIBRARY_NAME}
)

TARGET_INCLUDE_DIRECTORIES (${LIBRARY_NAME} PUBLIC
    ../../include
)

TARGET_COMPILE_FEATURES (${LIBRARY_NAME} PUBLIC
    cxx_std_11
)