SET (LIBRARY_NAME pdf)

PROJECT (${LIBRARY_NAME} CXX)

SET (SOURCES
    cosine_pdf
    hittable_pdf
    mixture_pdf
)

ADD_LIBRARY (${LIBRARY_NAME} STATIC
    ${SOURCES}
)

TARGET_LINK_LIBRARIES (${LIBRARY_NAME} PUBLIC
    basic
)

TARGET_INCLUDE_DIRECTORIES (${LIBRARY_NAME} PRIVATE
    ../../include/${LIBRARY_NAME}
)

TARGET_INCLUDE_DIRECTORIES (${LIBRARY_NAME} PUBLIC
    ../../include
)

TARGET_COMPILE_FEATURES (${LIBRARY_NAME} PUBLIC
    cxx_std_11
)