CMAKE_MINIMUM_REQUIRED (VERSION 3.11...3.19)

SET (LIBRARY_NAME thread_pool)

PROJECT (${LIBRARY_NAME} CXX)

SET (SOURCES
    thread_pool
)

ADD_LIBRARY (${LIBRARY_NAME} STATIC
    ${SOURCES}
)

FIND_PACKAGE (Threads)

IF (UNIX)
    TARGET_LINK_LIBRARIES (${LIBRARY_NAME} PUBLIC Threads::Threads)
ELSE (UNIX)

ENDIF (UNIX)

TARGET_INCLUDE_DIRECTORIES (${LIBRARY_NAME} PRIVATE
    ../../include/${LIBRARY_NAME}
)

TARGET_INCLUDE_DIRECTORIES (${LIBRARY_NAME} PUBLIC
    ../../include
)

TARGET_COMPILE_FEATURES (${LIBRARY_NAME} PUBLIC
    cxx_std_11
)